--- a/html1/index.html
+++ b/html1/index.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-   
+   <h1> <i>Name Surname</i></h1>
+   <p><b>About:</b>Lorem, ipsum dolor sit amet Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis rerum corrupti a adipisci cum, voluptatem consectetur libero inventore quisquam, nulla maxime, tenetur excepturi neque placeat! consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, doloremque. Labore iste itaque incidunt maxime! Eaque id non asperiores vitae. cum eligendi quos culpa </p>
+    <h3>Hobbies</h3>
+    <ul style="list-style-type: circle;">
+        <li>Football</li>
+        <li>Programming</li>
+        <li>Swimming</li>
+        <li>Reading books</li>
+    </ul>
+    <hr>
+    <img src="https://www.gettyimages.com/gi-resources/images/500px/983794168.jpg" alt="sekil" width="380">
+    <ol style="list-style-type: lower-latin;">
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">LinkedIN</a></li>
+        <li><a href="#">GitHub</a></li>
+    </ol>
 </body>
 </html>
